--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 *{
 	margin: 0px;
 	padding: 0px;
+	border: 0px;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 header{
@@ -13,6 +16,7 @@ nav{
 	width: 100%;
 	padding: 10px 0px;
 	background: -webkit-linear-gradient(top, #FFBF00, #ECB100);
+	background: -moz-linear-gradient(top, #FFBF00, #ECB100);
 	text-align: center;
 	float: left;
 }
@@ -83,4 +87,37 @@ p{
 
 .btn:hover{
 	background: #B20000;
+}
+
+.no-cssgradients nav{
+	background: #ECB100;
+}
+
+footer{
+	width: 100%;
+	background: #FCB100;
+	padding: 10px 0px;
+	float: left;
+	text-align: center;
+	font: 1em Rokkit, Tahoma;
+	color: #FFF;
+}
+
+footer a{
+	text-decoration: none;
+	opacity: 0.5;
+	transition: all 0.5s;
+}
+
+footer a:hover{
+	opacity: 1;
+}
+
+#banner{
+	width: 100%;
+	float: left;
+}
+
+#banner img{
+	width: 100%;
 }
